[tool.poetry]
name = "acs_slicer"
version = "0.1.0"
description = ""
authors = ["calebjcourtney"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
pandas = "^2.2.2"
dash = "^2.17.1"
requests = "^2.32.4"
dash-ag-grid = "^31.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
