[tool.poetry]
name = "acs_slicer"
version = "0.1.0"
description = ""
authors = ["calebjcourtney"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
Flask = ">=3.0.3"
pandas = ">=3.0.1"
dash = "^4.0.0"
requests = ">=2.32.5"
dash-ag-grid = ">=33.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
